<resources>
    <string name="app_name">EasyCalc</string>
    <string name="clear" translatable="false">C</string>
    <string name="delete" translatable="false">Del</string>
    <string name="equals" translatable="false">=</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">–</string>
    <string name="multiply" translatable="false">×</string>
    <string name="divide" translatable="false">÷</string>
    <string name="lbracket" translatable="false">(</string>
    <string name="rbracket" translatable="false">)</string>
    <string name="sqrt" translatable="false">√</string>
    <string name="square" translatable="false">\u00B2</string>

    <string name="sin" translatable="false">Sin</string>
    <string name="cos" translatable="false">Cos</string>
    <string name="tan" translatable="false">Tan</string>
    <string name="cosec" translatable="false">Cosec</string>
    <string name="sec" translatable="false">Sec</string>
    <string name="cot" translatable="false">Cot</string>
    <string name="inv" translatable="false">Invert</string>
    <string name="deg" translatable="false">Deg</string>
    <string name="rad" translatable="false">Rad</string>

    <string name="pi" translatable="false">π</string>

    <string name="mem_plus" translatable="false">M+</string>
    <string name="mem_minus" translatable="false">M-</string>
    <string name="mem_clear" translatable="false">MC</string>
    <string name="mem_recall" translatable="false">MR</string>
    <string name="history">HISTORY</string>
    <string name="numpad" translatable="false">NUMPAD</string>
    <string name="mem_holder" translatable="false">MEM = %1$s</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>

    <string name="normal" translatable="false">normal</string>
    <string name="inverse" translatable="false">inverse</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal" translatable="false">.</string>

    <string name="memoryAddError">Could not add answer to memory.</string>
    <string name="memorySubtractError">Could not subtract answer from memory.</string>

    <string name="clear_history_prompt">This will delete all your history. Are you sure you want to continue?</string>
    <string name="accuracy_prompt">The accuracy of the inbuilt constants (Pi, E) is limited to 50 digits.
        Calculations with them may not be accurate.</string>

    <string name="settings">Settings</string>
    <string name="settings_show_mem_buttons">Show memory buttons</string>
    <string name="settings_vibrate_button_click">Vibrate on button click</string>
    <string name="settings_decimal_accuracy">Accuracy of decimals</string>
    <string name="settings_decimal_accuracy_description">Number of digits to show after a decimal point</string>
    <string name="settings_language">Language</string>

    <string-array name="languages" translatable="false">
        <item>English (US)</item>
        <item>हिंदी</item>
    </string-array>

    <string-array name="localeValues" translatable="false">
        <item>en</item>
        <item>hi</item>
    </string-array>
</resources>
