<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:title="@string/settings_show_mem_buttons"
        android:textColor="@android:color/black"
        android:key="mem_buttons"
        android:defaultValue="true" />

    <SwitchPreference
        android:title="@string/settings_vibrate_button_click"
        android:textColor="@android:color/black"
        android:key="vibrate"
        android:defaultValue="true" />

    <EditTextPreference
        android:title="@string/settings_decimal_accuracy"
        android:summary="@string/settings_decimal_accuracy_description"
        android:textColor="@android:color/black"
        android:numeric="integer"
        android:key="scale"
        android:defaultValue="10" />

    <ListPreference
        android:title="@string/settings_language"
        android:textColor="@android:color/black"
        android:key="locale"
        android:entryValues="@array/localeValues"
        android:entries="@array/languages"
        android:defaultValue="0"/>

</PreferenceScreen>