<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/deg"
            android:layout_gravity="end"
            android:gravity="end|center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onS"
            android:textColor="@android:color/black"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/rad"
            android:layout_gravity="end"
            android:gravity="start|center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:paddingStart="10sp"
            android:paddingLeft="10sp"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:text="@string/sin"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:text="@string/cos"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:text="@string/tan"
            android:textSize="40sp"
            android:textColor="@android:color/black"
            android:onClick="onNonNumpadButtonClick"
            android:layout_height="match_parent"
            android:background="@drawable/bg_ripple"
            android:layout_weight="1"/>
    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/inv"
            android:textSize="20sp"
            android:background="@color/colorAccent"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</LinearLayout>