<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:text="@string/sin"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:onClick="onNonNumpadButtonClick"
        android:layout_height="match_parent"
        android:background="@drawable/bg_ripple"
        android:layout_weight="1"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:text="@string/cos"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:onClick="onNonNumpadButtonClick"
        android:layout_height="match_parent"
        android:background="@drawable/bg_ripple"
        android:layout_weight="1"/>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:text="@string/tan"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:onClick="onNonNumpadButtonClick"
        android:layout_height="match_parent"
        android:background="@drawable/bg_ripple"
        android:layout_weight="1"/>
</TableRow>
